更新工程代码视图